// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CodeBlock 1`] = `
{
  "blocks": [
    {
      "content": "foo();

bar();",
      "delimited": true,
      "metadata": {
        "attributes": [
          {
            "name": "source",
            "type": "AttributeEntry",
          },
          {
            "name": "js",
            "type": "AttributeEntry",
          },
        ],
      },
      "type": "CodeBlock",
    },
  ],
  "type": "Document",
}
`;

exports[`ListingBlock - delimited 1`] = `
{
  "blocks": [
    {
      "type": "BlankLine",
    },
    {
      "content": "newlines are


ok",
      "delimited": true,
      "metadata": {
        "attributes": [
          {
            "name": "foo",
            "type": "AttributeEntry",
          },
          {
            "name": "bar",
            "type": "AttributeEntry",
          },
        ],
      },
      "type": "ListingBlock",
    },
  ],
  "type": "Document",
}
`;

exports[`ListingBlock 1`] = `
{
  "blocks": [
    {
      "type": "BlankLine",
    },
    {
      "content": [
        {
          "content": "baz",
          "type": "PlainText",
        },
      ],
      "metadata": {
        "attributes": [
          {
            "name": "foo",
            "type": "AttributeEntry",
          },
          {
            "name": "bar",
            "type": "AttributeEntry",
          },
        ],
      },
      "type": "Paragraph",
    },
  ],
  "type": "Document",
}
`;
